<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="checksum">Checksum</string>
    <string name="save_as">Save as</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="open_with">Open with</string>
    <string name="no_app_found">No valid app found</string>
    <string name="set_as">Set as</string>
    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
    <string name="download">Download</string>
    <string name="folder_empty">Folder is empty</string>
    <string name="description">Open source file manager for keeping your files in safe</string>
    <string name="clear">Clear</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="manage_favorites">Manage favorites</string>
    <string name="go_to_favorite">Go to favorite</string>
    <string name="favorites_activity_placeholder">You can add frequently used folders to favorites for easy access from anywhere.</string>
    <string name="search">Search</string>
    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
    <string name="filter">Filter</string>
    <string name="no_items_found">No items found.</string>
    <string name="no_storage_permissions">Storage permission is required</string>
    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
    <string name="prepend_filenames">Prepend filenames</string>
    <string name="append_filenames">Append filenames</string>
    <string name="string_to_add">String to add</string>
    <string name="move">Move</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="invalid_destination">Could not write to the selected destination</string>
    <string name="source_and_destination_same">Source and destination cannot be the same</string>
    <string name="copying">Copying…</string>
    <string name="copying_success">Files copied successfully</string>
    <string name="copy_move_failed">An error occurred</string>
    <string name="copying_success_partial">Some files could not be copied</string>
    <string name="moving">Moving…</string>
    <string name="moving_success">Files moved successfully</string>
    <string name="moving_success_partial">Some files could not be moved</string>
    <string name="encrypting">Encrypting…</string>
    <string name="encrypting_success">Files encrypted successfully</string>
    <string name="encryption_failed">An error occurred</string>
    <string name="encrypting_success_partial">Some files could not be encrypted</string>
    <string name="decrypting">Decrypting…</string>
    <string name="decrypting_success">Files decrypted successfully</string>
    <string name="decryption_failed">An error occurred</string>
    <string name="decrypting_success_partial">Some files could not be decrypted</string>
    <string name="hiding">Hiding…</string>
    <string name="hiding_success">Files hidden successfully</string>
    <string name="hiding_success_partial">Some files could not be hidden</string>
    <string name="unhiding">Unhiding…</string>
    <string name="unhiding_success">Files unhidden successfully</string>
    <string name="unhiding_success_partial">Some files could not be unhidden</string>
    <string name="could_not_create_folder">Could not create folder %s</string>
    <string name="could_not_create_file">Could not create file %s</string>
    <string name="no_space">The destination does not have enough space available.\nRequired %1$s, available %2$s</string>
    <string name="saving">Saving…</string>
    <string name="file_saved">File saved successfully</string>
    <string name="create_new">Create new</string>
    <string name="folder">Folder</string>
    <string name="file">File</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="name_taken">A file or folder with that name already exists</string>
    <string name="invalid_name">The name contains invalid characters</string>
    <string name="empty_name">Please enter a name</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="invalid_password">Invalid password</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="invalid_password_pattern">Password must contain 8 characters and at least one number and one letter</string>
    <string name="password_hint">Password</string>
    <string name="password_again_hint">Password verification</string>
    <string name="file_already_exists">File \"%s\" already exists</string>
    <string name="folder_already_exists">Folder \"%s\" already exists</string>
    <string name="merge">Merge</string>
    <string name="keep_both">Keep both</string>
    <string name="overwrite">Overwrite</string>
    <string name="skip">Skip</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="select_folder">Select a folder</string>
    <string name="select_file">Select a file</string>
    <string name="confirm_storage_access_title">Confirm external storage access</string>
    <string name="confirm_storage_access_text">Please choose the top folder of the SD card on the next screen, to grant write access</string>
    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
    <string name="confirm_selection">Confirm selection</string>
    <string name="tutorial_hide_description"><![CDATA[Here you can confirm destination for file in the hidden storage.<br/> <small><i>Tip: You can create folders in the hidden storage for better organization of the hidden files</small></i>]]></string>
    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="delete_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="select_storage">Select storage</string>
    <string name="internal">Internal</string>
    <string name="hidden">Hidden</string>
    <string name="sd_card">SD Card</string>
    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
    <string name="sd_card_usb_same">SD card and USB device paths cannot be the same</string>
    <string name="properties">Properties</string>
    <string name="path">Path</string>
    <string name="items_selected">Items selected</string>
    <string name="direct_children_count">Direct children count</string>
    <string name="files_count">Total files count</string>
    <string name="resolution">Resolution</string>
    <string name="duration">Duration</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="focal_length">Focal length</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso_speed">ISO speed</string>
    <string name="f_number">F-number</string>
    <string name="camera">Camera</string>
    <string name="exif">EXIF</string>
    <string name="song_title">Song title</string>
    <string name="gps_coordinates">GPS coordinates</string>
    <string name="altitude">Altitude</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="select_all">Select all</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="maximum_share_reached">You cannot share this much content at once</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="last_modified">Last modified</string>
    <string name="date_taken">Date taken</string>
    <string name="filename">Filename</string>
    <string name="extension">Extension</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="use_for_this_folder">Use for this folder only</string>
    <string name="proceed_with_deletion">Are you sure you want to proceed with the deletion?</string>
    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>
    <string name="share_hidden_file_confirmation">Are you sure you want to share %s from hidden storage?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="authenticate">Authenticate</string>
    <string name="app_unlocked_notification">App is unlocked. Tap to lock app.</string>
    <string name="prompt_info_title">App is locked</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="password_setup_title">Setup app password</string>
    <string name="password_remove">Remove</string>
    <string name="lock_app">Lock app</string>
    <string name="authentication_service_description">Service to handle unlocking of the app</string>
    <string name="lock_receiver_description">Receiver to lock the app at boot and shutdown</string>
    <string name="settings">Settings</string>
    <string name="manage_storage">Manage storage</string>
    <string name="settings_general">General</string>
    <string name="font_size">Font size</string>
    <string name="app_system_settings">App system settings</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra large</string>
    <string name="keep_last_modified_title">Keep old last-modified</string>
    <string name="keep_last_modified_summary_off">Keep old last-modified value at file operations is disabled</string>
    <string name="keep_last_modified_summary_on">Keep old last-modified value at file operations is enabled</string>
    <string name="keep_after_encryption_operation_title">Keep source file</string>
    <string name="keep_after_encryption_operation_summary_off">Keep source file after encryption/decryption is disabled</string>
    <string name="keep_after_encryption_operation_summary_on">Keep source file after encryption/decryption is enabled</string>
    <string name="disable_screenshots_title">Block screenshots</string>
    <string name="disable_screenshots_summary_off">Block screenshots in the recent list and inside the app is disabled</string>
    <string name="disable_screenshots_summary_on">Block screenshots in the recent list and inside the app is enabled</string>
    <string name="show_media_thumbnail_title">Show media thumbnail</string>
    <string name="show_media_thumbnail_summary_off">Show media thumbnail is disabled</string>
    <string name="show_media_thumbnail_summary_on">Show media thumbnail is enabled</string>
    <string name="media_thumbnail_clear_title">Clear media thumbnail cache</string>
    <string name="media_thumbnail_clear_cleared">Cache cleared</string>
    <string name="app_data_cleared">App data cleared</string>
    <string name="app_data_error">Error occurred when app data was deleting</string>
    <string name="app_lock_title">Lock app access</string>
    <string name="app_lock_summary_off">Lock app access is disabled</string>
    <string name="app_name">File Manager</string>
    <string name="about_label_license">License</string>
    <string name="about_label_gnu">GNU License</string>
    <string name="about_label_source">Source code</string>
</resources>