<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/medium_margin">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="@dimen/big_margin"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/app_logo_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- license -->
            <LinearLayout
                android:id="@+id/about_layout_license"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin">

                <ImageView
                    android:id="@+id/about_img_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="#FFFFFF"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginEnd="@dimen/excessive_margin"
                    android:contentDescription="@string/about_label_license"
                    app:srcCompat="@drawable/ic_copyright_vector" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_label_license"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_label_gnu"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </LinearLayout>





            <!-- source -->
            <LinearLayout
                android:id="@+id/about_layout_source"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin">

                <ImageView
                    android:id="@+id/about_img_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="#FFFFFF"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginEnd="@dimen/excessive_margin"
                    android:contentDescription="@string/about_label_source"
                    app:srcCompat="@drawable/ic_code_vector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_label_source"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

